@@ -2,6 +2,7 @@
 	- q3gridlayout replaced by qgridlayout
 	- q3ptrlist replaced by qlist
 	- q3multilinedit replaced by qtextedit
+	- q3valuelist replaced by qlist
 
 28. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- touch function of DBCatalog moved to proper place
